Changes where I forgot what they were

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,19 @@
         "bitset": "cpp",
         "cstring": "cpp",
         "map": "cpp",
-        "regex": "cpp"
-    }
+        "regex": "cpp",
+        "variant": "cpp",
+        "queue": "cpp"
+    },
+    "cSpell.words": [
+        "CPACK",
+        "GLFW",
+        "imconfig",
+        "imgui",
+        "imstb",
+        "libglfw",
+        "opengl",
+        "pthread",
+        "vsync"
+    ]
 }
