Refactor the code into so called models

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ add_executable(MandelbrotApp
     src/app_utility.cpp
     src/saved_view.cpp
     src/screenshot.cpp
+    src/model/model.cpp
+    src/model/model_rk45.cpp
+    src/model/model_super_sampling.cpp
+    src/model/model_double_pendulum.cpp
 )
 
 # optional: headers for IDE visibility
@@ -23,6 +27,10 @@ target_sources(MandelbrotApp PRIVATE
     src/ini_file.h
     src/saved_view.h
     src/screenshot.h
+    src/model/model.h
+    src/model/model_rk45.h
+    src/model/model_super_sampling.h
+    src/model/model_double_pendulum.h
 )
 
 # C++ standard
